Project capstone_ai_knee_xray_diagnosis {
  database_type: "MySQL"
  note: "Database schema based on new ERD"
}

Enum user_status {
  ACTIVE
  INACTIVE
}

Enum doctor_position {
  DEPARTMENT_HEAD
  NORMAL
}

Enum examination_status {
  CREATED
  AI_PROCESSING
  AI_COMPLETED
  REVIEWED
  REPORT_GENERATED
  CANCELLED
}

Table features {
  id bigint [pk, increment]
  name varchar(100)
}

Table permissions {
  id bigint [pk, increment]
  name varchar(100)
  feature_id bigint
  role_id bigint
}

Table users {
  id bigint [pk, increment]
  email varchar(150)
  username varchar(50)
  password varchar(100)
  phone varchar(30)
  role_id bigint [not null]
  status user_status [not null, default: 'ACTIVE']
  is_first_activated boolean [not null, default: true]
  created_at datetime [not null]
  updated_at datetime

  Note: "Parent table in the JPA JOINED inheritance hierarchy. Shared account identity for doctors and administrators. Only two roles are supported: DOCTOR and ADMIN. Authentication uses standard username/password and JWT tokens."
}

Table doctors {
  id bigint [pk]
  doctor_code varchar(50) [not null, unique]
  license_number varchar(100)
  specialization varchar(150)
  years_of_experience int
  academic_title varchar(100)
  degree varchar(100)
  bio text
  position doctor_position [not null]

  Note: "Child table in the JPA JOINED inheritance hierarchy representing doctors. The primary key `id` is a foreign key referencing `users.id`. Contains clinical and professional information."
}

Table admins {
  id bigint [pk]
}

Table doctors {
  id bigint [pk]
  years_of_experience int
}

Table notifications {
  id bigint [pk, increment]
  user_id bigint
  title varchar(150)
  message text
  type varchar(50)
  is_read boolean
  create_at datetime
  read_at datetime
}

Table audit_logs {
  id bigint [pk, increment]
  user_id bigint
  title varchar(150)
  description text
  ip_address varchar(100)
  user_agent varchar(255)
  time_stamp datetime
}

Table images {
  id bigint [pk, increment]
  extension varchar(10)
  s3_bucket_id varchar(255)
  s3_bucket_key varchar(255)
}

Table patients {
  id bigint [pk, increment]
}

Table examinations {
  id bigint [pk, increment]
  patient_id bigint
  doctor_id bigint
  encounter_code varchar(100)
  visit_time datetime
  status varchar(50)
  chief_complaint text
  clinical_notes text
  priority varchar(50)
  created_at datetime
  final_diagnosis text
}

Table dicom_instances {
  id bigint [pk, increment]
  study_date datetime
  study_description varchar(255)
  modality varchar(50)
  study_instance_uid varchar(150)
  series_instance_uid varchar(150)
  instance_uid varchar(150)
  seri_id varchar(150)
  created_at datetime
  dicom_image_id bigint
  png_image_id bigint
  examination_id bigint
}

Table ai_analyses {
  id bigint [pk, increment]
  examination_id bigint
  start_date datetime
  duration int
  status varchar(50)
  token varchar(255)
  average_level varchar(50)
  final_diagnosis text
  number_of_result int
  accuracy_rate decimal(5,4)
  created_at datetime
}

Ref: notifications.user_id > users.id [delete: cascade, update: cascade]
Ref: audit_logs.user_id > users.id [delete: set null, update: cascade]
Ref: users.role_id > roles.id [delete: restrict, update: cascade]
Ref: password_reset_tokens.user_id > users.id [delete: cascade, update: cascade]
Ref: dicom_informations.xray_image_id - xray_images.id [delete: cascade, update: cascade]
Ref: avatar_images.user_id - users.id [delete: cascade, update: cascade]

Table roles {
  id bigint [pk, increment]
  name varchar(50) [not null, unique]
  description text
  created_at datetime [not null]
  updated_at datetime
}

Table features {
  id bigint [pk, increment]
  name varchar(100) [not null, unique]
  description text
}

Table permissions {
  id bigint [pk, increment]
  feature_id bigint [not null]
  requires_permission_id bigint
  name varchar(100) [not null, unique]
  description text
}

Table role_permissions {
  id bigint [pk, increment]
  role_id bigint [not null]
  permission_id bigint [not null]
}

Ref: permissions.feature_id > features.id [delete: cascade, update: cascade]
Ref: permissions.requires_permission_id > permissions.id [delete: cascade, update: cascade]
Ref: role_permissions.role_id > roles.id [delete: cascade, update: cascade]
Ref: role_permissions.permission_id > permissions.id [delete: cascade, update: cascade]
